# TwentyQuestionsGame

./: .gitignore  README.md
src/: CMakeLists.txt  data.txt  datamgmt.cpp  datamgmt.h  main.cpp  options.cpp  options.h  tree.h  twentyq.cpp  twentyq.h
